XMLExper/m12/m12_467_1_tinyxml2/comparisono.txt
tinyxml2.cpp: In member function ‘const char* tinyxml2::XMLElement::GetText() const’:
tinyxml2.cpp:1713:58: error: cannot dynamic_cast ‘node’ (of type ‘const class tinyxml2::XMLNode*’) to type ‘class tinyxml2::XMLDocument*’ (conversion casts away constness)
 1713 |     if ( /*PCI*/dynamic_cast<tinyxml2::XMLDocument*>(node) && node->ToText() ) {
      |                                                          ^
diff: tinyxml2.o: No such file or directory
